k8s/core/metallb/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metallb
  namespace: metallb-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    - to:
        - ipBlock:
            cidr: 192.168.10.30/32
        - ipBlock:
            cidr: 192.168.10.31/32
        - ipBlock:
            cidr: 192.168.10.32/32
      ports:
        - protocol: TCP
          port: 6443
    - to:
        - ipBlock:
            cidr: 192.168.10.0/24
